# vuelto

./: --raw  .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CNAME  INSTALLATION.md  Makefile  README.html  README.md  ROADMAP.md  a.out  festi.go  go.mod  go.sum  index.html  mkdocs.yml  sitemap.xml  vuelto.go
.github/workflows/: ci_check.yml  cmake-multi-platform.yml  mkdocs.yml
docs/: index.html  index.md
docs/docs/: INSTALLATION.md
docs/todo/: index.md
examples/basic-window/: main.go
examples/images/: main.go
examples/rectangle/: main.go
examples/two-windows/: main.go
get-started/: index.html
home/: index.html
include/vuelto/: Vuelto.hpp
include/vuelto/vuelto/core/: app.h  app.hpp  renderer.hpp  structs.h
include/vuelto/vuelto/event/: event.h  keys.hpp
include/vuelto/vuelto/tools/: definitions.h  definitions.hpp
install/: index.html
internal/gl/: binding.go  gl.h  opengl.go  webgl.go
internal/graphics/gl/: binding.go
internal/graphics/webgl/: webgl.go
internal/js/: canvas.go  document.go  value.go
internal/windowing/: win.go  win_glfw.go  win_web.go
internal/windowing/cocoa/: cocoa.go
internal/windowing/wayland/: wayland.go
internal/windowing/web/: canvas.go  document.go  window.go
internal/windowing/win32/: win32.go
internal/windowing/x11/: x11.go
pkg/: app.go  audio.go  draw.go  image.go  renderer.go  shapes.go  vectors.go  window.go
roadmap/v1/: index.html
roadmap/v2/: index.html
search/: search_index.json
src/: Festi.h  Vuelto.h  Vuelto.hpp  app.go  audio.go  draw.go  image.go  renderer.go  vectors.go  window.go
src/app/: app.go  window.go
src/festi/: definitions.h  draw.c  window.c
src/renderer2d/: draw.go  image.go  renderer.go
src/vuelto/core/: app.c  app.cpp  app.h  app.hpp  draw.cpp  draw.hpp  renderer.c  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.hpp
src/vuelto/event/: event.c  event.cpp  event.h  event.hpp  keys.h
src/vuelto/shaders/: fragmentImage.glsl  fragmentRect.glsl  shader.cpp  shader.hpp  vertexImage.glsl  vertexRect.glsl
src/vuelto/tools/: definitions.h  definitions.hpp
test/: gltest.cpp  my_opengl_program  opengl.cpp  test.bat  test.c  test.cpp  test.go  test.sh
test/backend/: test.go
test/test/: test.go
test/test1/: test.go
tutorials/: index.html
website/: get-started.md  home.md  index.html  index.md  install.md
website/docs/: index.md
website/repo/: index.html
website/roadmap/: v1.md  v2.md
website/tutorials/: index.md
